Add virtual key code entry to support Command + Shift + [\] tab switching in some Chinese IME

When using Pinyin-IME, pressing Command + Shift + [ (or ]) does not lead to the
same NSEvent as those of other keyboard types. Therefore, when such IMEs are active
these standard key combinations do not work.

This CL will add two more rows to the list of global Mac shortkeys such that the
command lookup would fall back to the new entries which are based on virtual key
codes.

BUG=708895

Review-Url: https://codereview.chromium.org/2901293004
Cr-Commit-Position: refs/heads/master@{#477666}

Former-commit-id: 90b1637839bc498f3de67b66ca0a4c8e250929fb