chrome/browser/global_keyboard_shortcuts_cocoa_mac.mm
@@ -17,40 +17,42 @@
 const std::vector<KeyboardShortcutData>& GetWindowKeyboardShortcutTable() {
   // clang-format off
   CR_DEFINE_STATIC_LOCAL(std::vector<KeyboardShortcutData>, result, ({
-    //cmd   shift  cntrl  option vkeycode      char command
-    //---   -----  -----  ------ --------      ---- -------
+    //cmd   shift  cntrl  option vkeycode               char command
+    //---   -----  -----  ------ --------               ---- -------
     // '{' / '}' characters should be matched earlier than virtual key codes
     // (so we can match alt-8 as '{' on German keyboards).
-    {true,  false, false, false, 0,            '}', IDC_SELECT_NEXT_TAB},
-    {true,  false, false, false, 0,            '{', IDC_SELECT_PREVIOUS_TAB},
-    {false, false, true,  false, kVK_PageDown, 0,   IDC_SELECT_NEXT_TAB},
-    {false, false, true,  false, kVK_Tab,      0,   IDC_SELECT_NEXT_TAB},
-    {false, false, true,  false, kVK_PageUp,   0,   IDC_SELECT_PREVIOUS_TAB},
-    {false, true,  true,  false, kVK_Tab,      0,   IDC_SELECT_PREVIOUS_TAB},
+    {true,  false, false, false, 0,                     '}', IDC_SELECT_NEXT_TAB},
+    {true,  false, false, false, 0,                     '{', IDC_SELECT_PREVIOUS_TAB},
+    {true,  true,  false, false, kVK_ANSI_RightBracket, 0,   IDC_SELECT_NEXT_TAB},
+    {true,  true,  false, false, kVK_ANSI_LeftBracket,  0,   IDC_SELECT_PREVIOUS_TAB},
+    {false, false, true,  false, kVK_PageDown,          0,   IDC_SELECT_NEXT_TAB},
+    {false, false, true,  false, kVK_Tab,               0,   IDC_SELECT_NEXT_TAB},
+    {false, false, true,  false, kVK_PageUp,            0,   IDC_SELECT_PREVIOUS_TAB},
+    {false, true,  true,  false, kVK_Tab,               0,   IDC_SELECT_PREVIOUS_TAB},
 
-    //cmd  shift  cntrl  option vkeycode          char command
-    //---  -----  -----  ------ --------          ---- -------
+    //cmd  shift  cntrl  option vkeycode                char command
+    //---  -----  -----  ------ --------                ---- -------
     // Cmd-0..8 select the nth tab, with cmd-9 being "last tab".
-    {true, false, false, false, kVK_ANSI_1,       0,   IDC_SELECT_TAB_0},
-    {true, false, false, false, kVK_ANSI_Keypad1, 0,   IDC_SELECT_TAB_0},
-    {true, false, false, false, kVK_ANSI_2,       0,   IDC_SELECT_TAB_1},
-    {true, false, false, false, kVK_ANSI_Keypad2, 0,   IDC_SELECT_TAB_1},
-    {true, false, false, false, kVK_ANSI_3,       0,   IDC_SELECT_TAB_2},
-    {true, false, false, false, kVK_ANSI_Keypad3, 0,   IDC_SELECT_TAB_2},
-    {true, false, false, false, kVK_ANSI_4,       0,   IDC_SELECT_TAB_3},
-    {true, false, false, false, kVK_ANSI_Keypad4, 0,   IDC_SELECT_TAB_3},
-    {true, false, false, false, kVK_ANSI_5,       0,   IDC_SELECT_TAB_4},
-    {true, false, false, false, kVK_ANSI_Keypad5, 0,   IDC_SELECT_TAB_4},
-    {true, false, false, false, kVK_ANSI_6,       0,   IDC_SELECT_TAB_5},
-    {true, false, false, false, kVK_ANSI_Keypad6, 0,   IDC_SELECT_TAB_5},
-    {true, false, false, false, kVK_ANSI_7,       0,   IDC_SELECT_TAB_6},
-    {true, false, false, false, kVK_ANSI_Keypad7, 0,   IDC_SELECT_TAB_6},
-    {true, false, false, false, kVK_ANSI_8,       0,   IDC_SELECT_TAB_7},
-    {true, false, false, false, kVK_ANSI_Keypad8, 0,   IDC_SELECT_TAB_7},
-    {true, false, false, false, kVK_ANSI_9,       0,   IDC_SELECT_LAST_TAB},
-    {true, false, false, false, kVK_ANSI_Keypad9, 0,   IDC_SELECT_LAST_TAB},
-    {true, true,  false, false, kVK_ANSI_M,       0,   IDC_SHOW_AVATAR_MENU},
-    {true, false, false, true,  kVK_ANSI_L,       0,   IDC_SHOW_DOWNLOADS},
+    {true, false, false, false, kVK_ANSI_1,             0,   IDC_SELECT_TAB_0},
+    {true, false, false, false, kVK_ANSI_Keypad1,       0,   IDC_SELECT_TAB_0},
+    {true, false, false, false, kVK_ANSI_2,             0,   IDC_SELECT_TAB_1},
+    {true, false, false, false, kVK_ANSI_Keypad2,       0,   IDC_SELECT_TAB_1},
+    {true, false, false, false, kVK_ANSI_3,             0,   IDC_SELECT_TAB_2},
+    {true, false, false, false, kVK_ANSI_Keypad3,       0,   IDC_SELECT_TAB_2},
+    {true, false, false, false, kVK_ANSI_4,             0,   IDC_SELECT_TAB_3},
+    {true, false, false, false, kVK_ANSI_Keypad4,       0,   IDC_SELECT_TAB_3},
+    {true, false, false, false, kVK_ANSI_5,             0,   IDC_SELECT_TAB_4},
+    {true, false, false, false, kVK_ANSI_Keypad5,       0,   IDC_SELECT_TAB_4},
+    {true, false, false, false, kVK_ANSI_6,             0,   IDC_SELECT_TAB_5},
+    {true, false, false, false, kVK_ANSI_Keypad6,       0,   IDC_SELECT_TAB_5},
+    {true, false, false, false, kVK_ANSI_7,             0,   IDC_SELECT_TAB_6},
+    {true, false, false, false, kVK_ANSI_Keypad7,       0,   IDC_SELECT_TAB_6},
+    {true, false, false, false, kVK_ANSI_8,             0,   IDC_SELECT_TAB_7},
+    {true, false, false, false, kVK_ANSI_Keypad8,       0,   IDC_SELECT_TAB_7},
+    {true, false, false, false, kVK_ANSI_9,             0,   IDC_SELECT_LAST_TAB},
+    {true, false, false, false, kVK_ANSI_Keypad9,       0,   IDC_SELECT_LAST_TAB},
+    {true, true,  false, false, kVK_ANSI_M,             0,   IDC_SHOW_AVATAR_MENU},
+    {true, false, false, true,  kVK_ANSI_L,             0,   IDC_SHOW_DOWNLOADS},
   }));
   // clang-format on
   return result;
